<resources>
    <string name="app_name">Dota 2 Heros Review</string>
    <string name="overview">Overview</string>
    <string name="detail">Detail</string>
    <string name="agility">Agility</string>
    <string name="intelligence">Intelligence</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hero_role">Hero Role</string>
    <string name="build">Builds</string>

    <string name="read_less">Read Less</string>
    <string name="read_more">Read More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hero_spell">Hero Spell</string>
    <string name="title_activity_basic_item_detail">BasicItemDetailActivity</string>
    <string name="item_price">Item Price</string>
    <string name="item_overview">Overview</string>
    <string name="item_detail">Detail</string>
    <string name="share_image_transition">share image transition</string>
    <string name="title_activity_upgrade_item_detail">UpgradeItemDetailActivity</string>
    <string name="item_recipe">Recipe</string>
    <string name="lbl_search">Search</string>
    <string name="hero_ability">Hero Ability</string>
    <string name="strength">Strength</string>
    <string name="developer_name">Win Than Htike</string>
    <string name="developer_position">Freelance Android Developer</string>
    <string name="developer_email">mmdev147@gmail.com</string>
    <string name="element_text">Element</string>

    <integer name="swing_anim_time">750</integer>
</resources>
