<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_medium">

            <xyz.winthanhtike.travelandtour.components.textviews.MMTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:paddingLeft="@dimen/margin_medium"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:text="@string/hero_spell"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_hero_spell"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/margin_medium"
                android:nestedScrollingEnabled="false"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <xyz.winthanhtike.travelandtour.components.textviews.MMTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textStyle="bold"
                android:paddingLeft="@dimen/margin_medium_2"
                android:fontFamily="sans-serif"
                android:text="@string/hero_role"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <xyz.winthanhtike.travelandtour.components.textviews.MMTextView
                android:id="@+id/tv_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="#000"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:textSize="@dimen/text_regular_2"
                android:lineSpacingMultiplier="1.3"
                android:padding="@dimen/margin_medium"
                android:text="#ကြ်န္ေတာ္တို႕ခ်စ္တဲ႕လြယ္အိပ္ႀကီးနဲဲ႔အတူဝုန္းျကဆို႕……" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <xyz.winthanhtike.travelandtour.components.textviews.MMTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textStyle="bold"
                android:paddingLeft="@dimen/margin_medium_2"
                android:fontFamily="sans-serif"
                android:text="@string/overview"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <xyz.winthanhtike.travelandtour.utils.CustomExpendableTextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxLines="5"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:ellipsize="end"
                android:textColor="#000"
                android:textSize="@dimen/text_regular_2"
                android:lineSpacingMultiplier="1.3"
                android:padding="@dimen/margin_medium"
                android:text="#ကြ်န္ေတာ္တို႕ခ်စ္တဲ႕လြယ္အိပ္ႀကီးနဲဲ႔အတူဝုန္းျကဆို႕……" />

            <Button
                android:id="@+id/btn_read_more_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/read_more"
                android:background="#fff"
                android:textAllCaps="false"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <xyz.winthanhtike.travelandtour.components.textviews.MMTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textStyle="bold"
                android:paddingLeft="@dimen/margin_medium_2"
                android:fontFamily="sans-serif"
                android:text="@string/detail"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <xyz.winthanhtike.travelandtour.utils.CustomExpendableTextView
                android:id="@+id/tv_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="#000"
                android:layout_marginLeft="@dimen/margin_medium"
                android:paddingLeft="@dimen/margin_medium_2"
                android:maxLines="5"
                android:ellipsize="end"
                android:textSize="@dimen/text_regular_2"
                android:lineSpacingMultiplier="1.3"
                android:padding="@dimen/margin_medium"
                android:text="#ကြ်န္ေတာ္တို႕ခ်စ္တဲ႕လြယ္အိပ္ႀကီးနဲဲ႔အတူဝုန္းျကဆို႕……" />

            <Button
                android:id="@+id/btn_read_more_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/read_more"
                android:background="#fff"
                android:textAllCaps="false"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>