<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="xyz.winthanhtike.travelandtour.activity.BasicItemDetailActivity"
    tools:showIn="@layout/activity_basic_item_detail">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <xyz.winthanhtike.travelandtour.components.textviews.MMTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textStyle="bold"
                android:paddingLeft="@dimen/margin_medium"
                android:fontFamily="sans-serif"
                android:text="@string/item_price"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="@dimen/margin_medium"
                    android:src="@drawable/gold"/>

                <xyz.winthanhtike.travelandtour.components.textviews.MMTextView
                    android:id="@+id/tv_item_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="#000"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_heading_1x"
                    android:lineSpacingMultiplier="1.3"
                    android:padding="@dimen/margin_medium"
                    android:text="1500" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <xyz.winthanhtike.travelandtour.components.textviews.MMTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:paddingLeft="@dimen/margin_medium"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:text="@string/item_overview"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <xyz.winthanhtike.travelandtour.components.textviews.MMTextView
                android:id="@+id/tv_item_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="#000"
                android:layout_marginLeft="@dimen/margin_medium"
                android:textSize="@dimen/text_regular_2"
                android:lineSpacingMultiplier="1.3"
                android:padding="@dimen/margin_medium"
                android:text="#ကြ်န္ေတာ္တို႕ခ်စ္တဲ႕လြယ္အိပ္ႀကီးနဲဲ႔အတူဝုန္းျကဆို႕……" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <xyz.winthanhtike.travelandtour.components.textviews.MMTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textStyle="bold"
                android:paddingLeft="@dimen/margin_medium"
                android:fontFamily="sans-serif"
                android:text="@string/item_detail"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <xyz.winthanhtike.travelandtour.components.textviews.MMTextView
                android:id="@+id/tv_item_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="#000"
                android:layout_marginLeft="@dimen/margin_medium"
                android:textSize="@dimen/text_regular_2"
                android:lineSpacingMultiplier="1.3"
                android:padding="@dimen/margin_medium"
                android:text="#ကြ်န္ေတာ္တို႕ခ်စ္တဲ႕လြယ္အိပ္ႀကီးနဲဲ႔အတူဝုန္းျကဆို႕……" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
